# AudioVideoClientServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  stream_serv  video_stream.c
AVClient/: .gitignore  AVClient.pro  CMakeLists.txt  Makefile  customdata.h  jsonobject.cpp  jsonobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
build-AVClient-Desktop-Debug/: AVClient  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
src/: cjson_test.c  rtp_server.c  test_client.c
test_rtsp/: .gitignore  CMakeLists.txt  Makefile  rtsp_serv.c
test_rtsp/src/: GstRtspMediaFactoryCustom.c  GstRtspMediaFactoryCustom.h  rtsp_serv.c
